syntax = "proto3";

option go_package = "prototype/.;prototype";

package rdo.service.types;

import "validate/validate.proto";

message BlockValue {
  uint64 num = 1;
  uint64 slot = 2;
  string hash = 3;
  string parent = 4;
  uint64 timestamp = 5;
  string proposer = 6;
  repeated string approvers = 7;
  repeated string slashers = 8;
  repeated TxValue transactions = 9;
}

message TxValue{
  uint64 num = 1;
  uint32 type = 2;
  uint64 timestamp = 3 [(validate.rules).uint64.gt = 0];
  string hash = 4 [(validate.rules).string.len = 66];
  uint64 fee = 5 [(validate.rules).uint64.gte = 0];
  bytes data = 6;
  repeated TxInputValue inputs = 7 [(validate.rules).repeated.min_items = 1];
  repeated TxOutputValue outputs = 8 [(validate.rules).repeated.min_items = 1];
}

message TxInputValue{
  string hash = 1 [(validate.rules).string.len = 66];
  uint32 index = 2;
  string address = 3 [(validate.rules).string.len = 42];
  uint64 amount = 4;
  string node = 5 [(validate.rules).string.max_len = 42];
}

message TxOutputValue{
  string address = 1 [(validate.rules).string.len = 42];
  uint64 amount = 2;
  string node = 3 [(validate.rules).string.max_len = 42];
}

message SignedTxValue {
  TxValue data = 1;
  string signature = 2 [(validate.rules).string.len = 132];
}

message NotSignedTxValue {
  TxValue data = 1;
  string signature = 2 [(validate.rules).string.len=0];
}

message UTxO{
  uint64 blockNum = 1;
  string hash = 2;
  uint32 index = 3;
  string from = 4;
  string to = 5;
  string node = 6;
  uint64 amount = 7;
  uint64 timestamp = 8;
  uint32 txtype = 9;
}
